updated id managment again
